# iMtxAP

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  appconf.h  iMtxAP.c
main/drivers/: uart.cpp  uart.h  wifi.cpp  wifi.h
main/libcomm/protocols/: protocolLIbs.h  protocolLibs.cpp  protocolsDto.cpp  protocolsDto.h
main/libcomm/protocols/layers/: serialDataLinkLayer.cpp  serialDataLinkLayer.h
main/libcomm/protocols/mtx/: mtxDto.cpp  mtxDto.h  mtxProtocol.cpp  mtxProtocol.h
main/libcomm/protocols/mtx/layers/: mtxLayers.cpp  mtxLayers.h
main/services/: dataServices.cpp  dataServices.h  systemServices.cpp  systemServices.h
main/utils/: utils.h
main/webcontrollers/: controllers.cpp  controllers.h
main/webserver/: webserver.cpp  webserver.h  wshelpers.cpp  wshelpers.h
main/webserver/libs/: wsLibs.cpp  wsLibs.h
main/webserver/routes/: routes.cpp  routes.h
